# ProfessionalPortraitBot

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: db.sqlite3  run.py
src/app/: __init__.py  handlers.py  keyboards.py
src/app/database/: __init__.py  models.py  requests.py  schemas.py
src/bot/: __init__.py  interface.py  logic.py  run.py  test_business_logic.py  utils.py
src/bot/handlers/: back_to_menu.py  fallback.py  free_prompting.py  main_menu.py  photo_upload.py  start.py
src/bot/keyboards/: back_button.py  done_button.py  main_menu.py
src/bot/services/: ai_photo_generator.py  model_trainer.py
src/bot/states/: photo_session.py
src/shared/: errors.py
src/shared/struct_log/: __init__.py  data_schemas.py  struct_log.py
