[tool.poetry]
name = "businessphotobot"
version = "0.1.0"
description = ""
authors = ["Vladimir Moroz <vmoroz@two.inc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.19.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

