[project]
name = "professionalportraitbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "aiohttp>=3.11.14",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "replicate>=1.0.4",
    "ruff>=0.11.2",
    "structlog>=25.2.0",
]
